// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click 1`] = `
<div>
  test component
  
  <div
    id="value"
  >
    false
  </div>
   
  <label
    class="seu-radio"
    role="radio"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="seu-radio__original"
      tabindex="-1"
      type="radio"
      value="1"
    />
     
    <span
      class="seu-radio__input"
    >
      <span
        class="seu-radio__inner"
      />
    </span>
     
    <span
      class="seu-radio__label"
    >
      label1
    </span>
  </label>
   
  <label
    class="seu-radio"
    role="radio"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="seu-radio__original"
      tabindex="-1"
      type="radio"
      value="2"
    />
     
    <span
      class="seu-radio__input"
    >
      <span
        class="seu-radio__inner"
      />
    </span>
     
    <span
      class="seu-radio__label"
    >
      label2
    </span>
  </label>
</div>
`;

exports[`click 2`] = `
<div>
  test component
  
  <div
    id="value"
  >
    1
  </div>
   
  <label
    aria-checked="true"
    class="seu-radio is-checked"
    role="radio"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="seu-radio__original"
      tabindex="-1"
      type="radio"
      value="1"
    />
     
    <span
      class="seu-radio__input is-checked"
    >
      <span
        class="seu-radio__inner"
      />
    </span>
     
    <span
      class="seu-radio__label"
    >
      label1
    </span>
  </label>
   
  <label
    class="seu-radio"
    role="radio"
    tabindex="0"
  >
    <input
      aria-hidden="true"
      class="seu-radio__original"
      tabindex="-1"
      type="radio"
      value="2"
    />
     
    <span
      class="seu-radio__input"
    >
      <span
        class="seu-radio__inner"
      />
    </span>
     
    <span
      class="seu-radio__label"
    >
      label2
    </span>
  </label>
</div>
`;
